--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 		<meta name="description" content="Eslam El-Meniawwy portfolio website.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 		<title>Eslam El-Meniawy</title>
+		<link rel="stylesheet" href="css/styles.css" />
 	</head>
 	<body>
-
+		<script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 	</body>
 </html>
