Prepare portfolio styles

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="description" content="Eslam El-Meniawwy portfolio website.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-		<title>404</title>
+		<title>404 || Eslam El-Meniawy</title>
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,600" />
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,900,300,700" />
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ultra" />
