Add temps of rest of pages

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			</header>
 			<div class="mdl-layout__drawer mdl-layout--small-screen-only">
 				<nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-					<a class="mdl-navigation__link is-active" href="index.html">Portfolio</a>
+					<a class="mdl-navigation__link mdl-navigation__link--current is-active" href="index.html">Portfolio</a>
 					<a class="mdl-navigation__link" href="resume.html">Resume</a>
 					<a class="mdl-navigation__link" href="about.html">About Me</a>
 					<a class="mdl-navigation__link" href="contact.html">Contact Me</a>
@@ -47,7 +47,7 @@
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenan convallis.
 						</div>
 						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=AppName1">
 								View Details
 							</a>
 						</div>
@@ -60,7 +60,7 @@
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenan convallis.
 						</div>
 						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=AppName2">
 								View Details
 							</a>
 						</div>
@@ -73,7 +73,7 @@
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenan convallis.
 						</div>
 						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=AppName3">
 								View Details
 							</a>
 						</div>
@@ -86,7 +86,7 @@
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenan convallis.
 						</div>
 						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=AppName4">
 								View Details
 							</a>
 						</div>
@@ -99,7 +99,7 @@
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenan convallis.
 						</div>
 						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=AppName5">
 								View Details
 							</a>
 						</div>
@@ -112,7 +112,7 @@
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenan convallis.
 						</div>
 						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=AppName6">
 								View Details
 							</a>
 						</div>
@@ -125,7 +125,7 @@
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenan convallis.
 						</div>
 						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--primary" href="details.html?app=AppName7">
 								View Details
 							</a>
 						</div>
