--- a/contact.html
+++ b/contact.html
@@ -31,15 +31,26 @@
 			</header>
 			<div class="mdl-layout__drawer mdl-layout--small-screen-only">
 				<nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-					<a class="mdl-navigation__link is-active" href="index.html">Portfolio</a>
+					<a class="mdl-navigation__link" href="index.html">Portfolio</a>
 					<a class="mdl-navigation__link" href="resume.html">Resume</a>
 					<a class="mdl-navigation__link" href="about.html">About Me</a>
-					<a class="mdl-navigation__link" href="contact.html">Contact Me</a>
+					<a class="mdl-navigation__link mdl-navigation__link--current is-active" href="contact.html">Contact Me</a>
 				</nav>
 			</div>
 			<main class="mdl-layout__content">
 				<div class="mdl-grid portfolio-max-width">
-					
+					<div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
+						<div class="mdl-card__title">
+							<h2 class="mdl-card__title-text">Contact Me</h2>
+						</div>
+						<div class="mdl-grid portfolio-copy">
+							<div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
+								<p>
+									Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Sunt velit aliquip sunt elit ex nulla reprehenderit qui ut eiusmod ipsum do. Duis veniam reprehenderit laborum occaecat id proident nulla veniam. Duis enim deserunt voluptate aute veniam sint pariatur exercitation. Irure mollit est sit labore est deserunt pariatur duis aute laboris cupidatat. Consectetur consequat esse est sit veniam adipisicing ipsum enim irure.
+								</p>
+							</div>
+						</div>
+					</div>
 				</div>
 			</main>
 		</div>
