--- a/details.html
+++ b/details.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="description" content="Eslam El-Meniawwy portfolio website.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-		<title>About Me || Eslam El-Meniawy</title>
+		<title>Resume || Eslam El-Meniawy</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700">
 		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-pink.min.css" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -22,38 +22,28 @@
 				</div>
 				<div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
 					<nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-						<a class="mdl-navigation__link" href="index.html">Portfolio</a>
+						<a class="mdl-navigation__link is-active" href="index.html">Portfolio</a>
 						<a class="mdl-navigation__link" href="resume.html">Resume</a>
-						<a class="mdl-navigation__link is-active" href="about.html">About Me</a>
+						<a class="mdl-navigation__link" href="about.html">About Me</a>
 						<a class="mdl-navigation__link" href="contact.html">Contact Me</a>
 					</nav>
 				</div>
 			</header>
 			<div class="mdl-layout__drawer mdl-layout--small-screen-only">
 				<nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-					<a class="mdl-navigation__link" href="index.html">Portfolio</a>
+					<a class="mdl-navigation__link mdl-navigation__link--current is-active" href="index.html">Portfolio</a>
 					<a class="mdl-navigation__link" href="resume.html">Resume</a>
-					<a class="mdl-navigation__link mdl-navigation__link--current is-active" href="about.html">About Me</a>
+					<a class="mdl-navigation__link" href="about.html">About Me</a>
 					<a class="mdl-navigation__link" href="contact.html">Contact Me</a>
 				</nav>
 			</div>
 			<main class="mdl-layout__content">
 				<div class="mdl-grid portfolio-max-width">
-					<div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title">
-							<h2 class="mdl-card__title-text">About Me</h2>
-						</div>
-						<div class="mdl-grid portfolio-copy">
-							<div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
-								<p>
-									Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Sunt velit aliquip sunt elit ex nulla reprehenderit qui ut eiusmod ipsum do. Duis veniam reprehenderit laborum occaecat id proident nulla veniam. Duis enim deserunt voluptate aute veniam sint pariatur exercitation. Irure mollit est sit labore est deserunt pariatur duis aute laboris cupidatat. Consectetur consequat esse est sit veniam adipisicing ipsum enim irure.
-								</p>
-							</div>
-						</div>
-					</div>
+					
 				</div>
 			</main>
 		</div>
 		<script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+		<script type="text/javascript" src="js/details.js"></script>
 	</body>
 </html>
