--- a/resume.html
+++ b/resume.html
@@ -31,15 +31,18 @@
 			</header>
 			<div class="mdl-layout__drawer mdl-layout--small-screen-only">
 				<nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-					<a class="mdl-navigation__link is-active" href="index.html">Portfolio</a>
-					<a class="mdl-navigation__link" href="resume.html">Resume</a>
+					<a class="mdl-navigation__link" href="index.html">Portfolio</a>
+					<a class="mdl-navigation__link mdl-navigation__link--current is-active" href="resume.html">Resume</a>
 					<a class="mdl-navigation__link" href="about.html">About Me</a>
 					<a class="mdl-navigation__link" href="contact.html">Contact Me</a>
 				</nav>
 			</div>
 			<main class="mdl-layout__content">
 				<div class="mdl-grid portfolio-max-width">
-					
+					<div class="mdl-grid mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp no-padding">
+						<div class="mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet left-sidebar"></div>
+						<div class="mdl-cell mdl-cell--8-col mdl-cell--5-col-tablet"></div>
+					</div>
 				</div>
 			</main>
 		</div>
