Add image block to resume page

--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
 				</div>
 				<div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
 					<nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-						<a class="mdl-navigation__link" href="index.html">Portfolio</a>
+						<a class="mdl-navigation__link" href="/">Portfolio</a>
 						<a class="mdl-navigation__link is-active" href="resume.html">Resume</a>
 						<a class="mdl-navigation__link" href="about.html">About Me</a>
 						<a class="mdl-navigation__link" href="contact.html">Contact Me</a>
@@ -31,7 +31,7 @@
 			</header>
 			<div class="mdl-layout__drawer mdl-layout--small-screen-only">
 				<nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-					<a class="mdl-navigation__link" href="index.html">Portfolio</a>
+					<a class="mdl-navigation__link" href="/">Portfolio</a>
 					<a class="mdl-navigation__link mdl-navigation__link--current is-active" href="resume.html">Resume</a>
 					<a class="mdl-navigation__link" href="about.html">About Me</a>
 					<a class="mdl-navigation__link" href="contact.html">Contact Me</a>
@@ -40,7 +40,14 @@
 			<main class="mdl-layout__content">
 				<div class="mdl-grid portfolio-max-width">
 					<div class="mdl-grid mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp no-padding">
-						<div class="mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet left-sidebar"></div>
+						<div class="mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet left-sidebar">
+							<div class="left-sidebar-div left-sidebar-image-bg">
+								<img class="left-sidebar-image" src="img/logo.png">
+								<span class="mdl-color-text--white left-sidebar-name">Eslam El-Meniawy</span>
+								<span class="mdl-color-text--white left-sidebar-title">Senior Mobile Software Engineer</span>
+							</div>
+							<div class="left-sidebar-div"></div>
+						</div>
 						<div class="mdl-cell mdl-cell--8-col mdl-cell--5-col-tablet"></div>
 					</div>
 				</div>
