--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 				</div>
 				<div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
 					<nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-						<a class="mdl-navigation__link" href="index.html">Portfolio</a>
+						<a class="mdl-navigation__link" href="/">Portfolio</a>
 						<a class="mdl-navigation__link" href="resume.html">Resume</a>
 						<a class="mdl-navigation__link is-active" href="about.html">About Me</a>
 						<a class="mdl-navigation__link" href="contact.html">Contact Me</a>
@@ -31,7 +31,7 @@
 			</header>
 			<div class="mdl-layout__drawer mdl-layout--small-screen-only">
 				<nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-					<a class="mdl-navigation__link" href="index.html">Portfolio</a>
+					<a class="mdl-navigation__link" href="/">Portfolio</a>
 					<a class="mdl-navigation__link" href="resume.html">Resume</a>
 					<a class="mdl-navigation__link mdl-navigation__link--current is-active" href="about.html">About Me</a>
 					<a class="mdl-navigation__link" href="contact.html">Contact Me</a>
