Add about and contact

--- a/about.html
+++ b/about.html
@@ -46,7 +46,10 @@
 						<div class="mdl-grid portfolio-copy">
 							<div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
 								<p>
-									Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Sunt velit aliquip sunt elit ex nulla reprehenderit qui ut eiusmod ipsum do. Duis veniam reprehenderit laborum occaecat id proident nulla veniam. Duis enim deserunt voluptate aute veniam sint pariatur exercitation. Irure mollit est sit labore est deserunt pariatur duis aute laboris cupidatat. Consectetur consequat esse est sit veniam adipisicing ipsum enim irure.
+									I'm a senior Software Engireenr with 4+ years of experience working on mobile applications Android, cross platform(Cordova) and iOS.
+								</p>
+								<p>
+									Over the last 4 years, I have developed many native Android, iOS and cross platform applications using Java, XML, MySQL, JSON, HTML 5, CSS, JavaScript, Cordova and Swift. Besides, I have experience in Web and developed some web services. As well as writing automation tests using Appium.
 								</p>
 							</div>
 						</div>
