--- a/contact.html
+++ b/contact.html
@@ -45,9 +45,20 @@
 						</div>
 						<div class="mdl-grid portfolio-copy">
 							<div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
-								<p>
-									Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Sunt velit aliquip sunt elit ex nulla reprehenderit qui ut eiusmod ipsum do. Duis veniam reprehenderit laborum occaecat id proident nulla veniam. Duis enim deserunt voluptate aute veniam sint pariatur exercitation. Irure mollit est sit labore est deserunt pariatur duis aute laboris cupidatat. Consectetur consequat esse est sit veniam adipisicing ipsum enim irure.
-								</p>
+								<div class="left-data">
+									<div class="contact-item">
+										<div class=" icon material-icons round-btn-left-small icon-contact">location_on</div>
+										<div class="left-data-text">El-Mehalla EL-Kubra, Gharbia, Egypt</div>
+									</div>
+									<div class="contact-item">
+										<div class=" icon material-icons round-btn-left-small icon-contact">email</div>
+										<div class="left-data-text">eslam.elmeniawy@gmail.com</div>
+									</div>
+									<div class="contact-item">
+										<div class=" icon material-icons round-btn-left-small icon-contact">smartphone</div>
+										<div class="left-data-text text-contact">+20-12-2997-7919</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
