--- a/resume.html
+++ b/resume.html
@@ -46,7 +46,40 @@
 								<span class="mdl-color-text--white left-sidebar-name">Eslam El-Meniawy</span>
 								<span class="mdl-color-text--white left-sidebar-title">Senior Mobile Software Engineer</span>
 							</div>
-							<div class="left-sidebar-div"></div>
+							<div class="left-sidebar-div">
+								<div class="left-title-div-big">
+									<div class=" icon material-icons mdl-color-text--white round-btn-left-big left-sidebar-image-bg">person</div>
+									<div class="mdl-color-text--white left-title">About Me</div>
+								</div>
+								<div class="left-data">
+									<span class="mdl-color-text--white">I'm a senior Software Engireenr with 4+ years of experience working on mobile applications Android, cross platform(Cordova) and iOS.</span>
+									<br>
+									<br>
+									<span class="mdl-color-text--white">Over the last 4 years, I have developed many native Android, iOS and cross platform applications using Java, XML, MySQL, JSON, HTML 5, CSS, JavaScript, Cordova and Swift. Besides, I have experience in Web and developed some web services. As well as writing automation tests using Appium.</span>
+								</div>
+								<div class="left-title-div-big">
+									<div class=" icon material-icons mdl-color-text--white round-btn-left-big left-sidebar-image-bg">contacts</div>
+									<div class="mdl-color-text--white left-title">Contact Me</div>
+								</div>
+								<div class="left-data">
+									<div class="contact-item">
+										<div class=" icon material-icons round-btn-left-small">location_on</div>
+										<div class="mdl-color-text--white left-data-text">El-Mehalla EL-Kubra, Gharbia, Egypt</div>
+									</div>
+									<div class="contact-item">
+										<div class=" icon material-icons round-btn-left-small">email</div>
+										<div class="mdl-color-text--white left-data-text">eslam.elmeniawy@gmail.com</div>
+									</div>
+									<div class="contact-item">
+										<div class=" icon material-icons round-btn-left-small">smartphone</div>
+										<div class="mdl-color-text--white left-data-text">+20-12-2997-7919</div>
+									</div>
+								</div>
+								<div class="left-title-div-big">
+									<div class=" icon material-icons mdl-color-text--white round-btn-left-big left-sidebar-image-bg">star</div>
+									<div class="mdl-color-text--white left-title">My Skills</div>
+								</div>
+							</div>
 						</div>
 						<div class="mdl-cell mdl-cell--8-col mdl-cell--5-col-tablet"></div>
 					</div>
