--- a/resume.html
+++ b/resume.html
@@ -52,10 +52,14 @@
 									<div class="mdl-color-text--white left-title">About Me</div>
 								</div>
 								<div class="left-data">
-									<span class="mdl-color-text--white">I'm a senior Software Engireenr with 4+ years of experience working on mobile applications Android, cross platform(Cordova) and iOS.</span>
+									<span class="mdl-color-text--white">
+										I'm a senior Software Engireenr with 4+ years of experience working on mobile applications Android, cross platform (Cordova) and iOS.
+									</span>
 									<br>
 									<br>
-									<span class="mdl-color-text--white">Over the last 4 years, I have developed many native Android, iOS and cross platform applications using Java, XML, MySQL, JSON, HTML 5, CSS, JavaScript, Cordova and Swift. Besides, I have experience in Web and developed some web services. As well as writing automation tests using Appium.</span>
+									<span class="mdl-color-text--white">
+										Over the last 4 years, I have developed many native Android, iOS and cross platform applications using Java, XML, MySQL, JSON, HTML 5, CSS, JavaScript, Cordova and Swift. Besides, I have experience in Web and developed some web services. As well as writing automation tests using Appium.
+									</span>
 								</div>
 								<div class="left-title-div-big">
 									<div class=" icon material-icons mdl-color-text--white round-btn-left-big left-sidebar-image-bg">contacts</div>
@@ -78,6 +82,80 @@
 								<div class="left-title-div-big">
 									<div class=" icon material-icons mdl-color-text--white round-btn-left-big left-sidebar-image-bg">star</div>
 									<div class="mdl-color-text--white left-title">My Skills</div>
+								</div>
+								<div class="left-data">
+									<div class="contact-item">
+										<div class=" icon material-icons round-btn-left-small">android</div>
+										<div class="mdl-color-text--white left-data-text">
+											Android Development
+											<div class="progress progress-outer">
+												<div class="progress progress-inner" style="width: 90%;"></div>
+											</div>
+										</div>
+									</div>
+									<div class="contact-item">
+										<div class=" icon material-icons round-btn-left-small"><img src="img/cordova.png"></div>
+										<div class="mdl-color-text--white left-data-text">
+											Cross Development (Cordova)
+											<div class="progress progress-outer">
+												<div class="progress progress-inner" style="width: 85%;"></div>
+											</div>
+										</div>
+									</div>
+									<div class="contact-item">
+										<div class=" icon material-icons round-btn-left-small"><img src="img/apple.svg"></div>
+										<div class="mdl-color-text--white left-data-text">
+											iOS Development (Swift)
+											<div class="progress progress-outer">
+												<div class="progress progress-inner" style="width: 70%;"></div>
+											</div>
+										</div>
+									</div>
+									<div class="contact-item">
+										<div class=" icon material-icons round-btn-left-small">public</div>
+										<div class="mdl-color-text--white left-data-text">
+											Web Development
+											<div class="progress progress-outer">
+												<div class="progress progress-inner" style="width: 60%;"></div>
+											</div>
+										</div>
+									</div>
+									<div class="contact-item">
+										<div class=" icon material-icons round-btn-left-small">bug_report</div>
+										<div class="mdl-color-text--white left-data-text">
+											Automation Testing (Appium)
+											<div class="progress progress-outer">
+												<div class="progress progress-inner" style="width: 70%;"></div>
+											</div>
+										</div>
+									</div>
+									<div class="contact-item">
+										<div class=" icon material-icons round-btn-left-small">supervisor_account</div>
+										<div class="mdl-color-text--white left-data-text">
+											Teamwork
+											<div class="progress progress-outer">
+												<div class="progress progress-inner" style="width: 80%;"></div>
+											</div>
+										</div>
+									</div>
+									<div class="contact-item">
+										<div class=" icon material-icons round-btn-left-small">lightbulb_outline</div>
+										<div class="mdl-color-text--white left-data-text">
+											Creativity
+											<div class="progress progress-outer">
+												<div class="progress progress-inner" style="width: 85%;"></div>
+											</div>
+										</div>
+									</div>
+									<div class="contact-item">
+										<div class=" icon material-icons round-btn-left-small">device_hub</div>
+										<div class="mdl-color-text--white left-data-text">
+											Leadership
+											<div class="progress progress-outer">
+												<div class="progress progress-inner" style="width: 70%;"></div>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
