Add work and education

--- a/resume.html
+++ b/resume.html
@@ -62,30 +62,30 @@
 									</span>
 								</div>
 								<div class="left-title-div-big">
-									<div class=" icon material-icons mdl-color-text--white round-btn-left-big left-sidebar-image-bg">contacts</div>
+									<div class="icon material-icons mdl-color-text--white round-btn-left-big left-sidebar-image-bg">contacts</div>
 									<div class="mdl-color-text--white left-title">Contact Me</div>
 								</div>
 								<div class="left-data">
 									<div class="contact-item">
-										<div class=" icon material-icons round-btn-left-small">location_on</div>
+										<div class="icon material-icons round-btn-left-small">location_on</div>
 										<div class="mdl-color-text--white left-data-text">El-Mehalla EL-Kubra, Gharbia, Egypt</div>
 									</div>
 									<div class="contact-item">
-										<div class=" icon material-icons round-btn-left-small">email</div>
+										<div class="icon material-icons round-btn-left-small">email</div>
 										<div class="mdl-color-text--white left-data-text">eslam.elmeniawy@gmail.com</div>
 									</div>
 									<div class="contact-item">
-										<div class=" icon material-icons round-btn-left-small">smartphone</div>
+										<div class="icon material-icons round-btn-left-small">smartphone</div>
 										<div class="mdl-color-text--white left-data-text">+20-12-2997-7919</div>
 									</div>
 								</div>
 								<div class="left-title-div-big">
-									<div class=" icon material-icons mdl-color-text--white round-btn-left-big left-sidebar-image-bg">star</div>
+									<div class="icon material-icons mdl-color-text--white round-btn-left-big left-sidebar-image-bg">star</div>
 									<div class="mdl-color-text--white left-title">My Skills</div>
 								</div>
 								<div class="left-data">
 									<div class="contact-item">
-										<div class=" icon material-icons round-btn-left-small">android</div>
+										<div class="icon material-icons round-btn-left-small">android</div>
 										<div class="mdl-color-text--white left-data-text">
 											Android Development
 											<div class="progress progress-outer">
@@ -94,7 +94,7 @@
 										</div>
 									</div>
 									<div class="contact-item">
-										<div class=" icon material-icons round-btn-left-small"><img src="img/cordova.png"></div>
+										<div class="icon material-icons round-btn-left-small"><img src="img/cordova.png"></div>
 										<div class="mdl-color-text--white left-data-text">
 											Cross Development (Cordova)
 											<div class="progress progress-outer">
@@ -103,7 +103,7 @@
 										</div>
 									</div>
 									<div class="contact-item">
-										<div class=" icon material-icons round-btn-left-small"><img src="img/apple.svg"></div>
+										<div class="icon material-icons round-btn-left-small"><img src="img/apple.svg"></div>
 										<div class="mdl-color-text--white left-data-text">
 											iOS Development (Swift)
 											<div class="progress progress-outer">
@@ -112,7 +112,7 @@
 										</div>
 									</div>
 									<div class="contact-item">
-										<div class=" icon material-icons round-btn-left-small">public</div>
+										<div class="icon material-icons round-btn-left-small">public</div>
 										<div class="mdl-color-text--white left-data-text">
 											Web Development
 											<div class="progress progress-outer">
@@ -121,7 +121,7 @@
 										</div>
 									</div>
 									<div class="contact-item">
-										<div class=" icon material-icons round-btn-left-small">bug_report</div>
+										<div class="icon material-icons round-btn-left-small">bug_report</div>
 										<div class="mdl-color-text--white left-data-text">
 											Automation Testing (Appium)
 											<div class="progress progress-outer">
@@ -130,7 +130,7 @@
 										</div>
 									</div>
 									<div class="contact-item">
-										<div class=" icon material-icons round-btn-left-small">supervisor_account</div>
+										<div class="icon material-icons round-btn-left-small">supervisor_account</div>
 										<div class="mdl-color-text--white left-data-text">
 											Teamwork
 											<div class="progress progress-outer">
@@ -139,7 +139,7 @@
 										</div>
 									</div>
 									<div class="contact-item">
-										<div class=" icon material-icons round-btn-left-small">lightbulb_outline</div>
+										<div class="icon material-icons round-btn-left-small">lightbulb_outline</div>
 										<div class="mdl-color-text--white left-data-text">
 											Creativity
 											<div class="progress progress-outer">
@@ -148,7 +148,7 @@
 										</div>
 									</div>
 									<div class="contact-item">
-										<div class=" icon material-icons round-btn-left-small">device_hub</div>
+										<div class="icon material-icons round-btn-left-small">device_hub</div>
 										<div class="mdl-color-text--white left-data-text">
 											Leadership
 											<div class="progress progress-outer">
@@ -159,7 +159,126 @@
 								</div>
 							</div>
 						</div>
-						<div class="mdl-cell mdl-cell--8-col mdl-cell--5-col-tablet"></div>
+						<div class="mdl-cell mdl-cell--8-col mdl-cell--5-col-tablet">
+							<div class="right-title-big-container">
+								<div class="icon material-icons mdl-color-text--white round-btn-right">work</div>
+								<div class="right-title-big">Work Experince</div>
+							</div>
+							<div class="right-content">
+								<div class="right-title-small">Senior Mobile Software Developer</div>
+								<div class="mdl-grid no-padding">
+									<div class="mdl-cell mdl-cell--5-col">
+										<div class="icon material-icons place right-place-icons">domain</div>
+										<div class="place right-place-text">MicroDoers</div>
+									</div>
+									<div class="mdl-cell mdl-cell--7-col">
+										<div class="icon material-icons place right-place-icons">date_range</div>
+										<div class="place right-place-text">1 Mar 2016-Current</div>
+									</div>
+								</div>
+								<div class="right-details">
+									<p>
+										Developing native Android applications using Java, XML and Android Studio.
+									</p>
+									<p>
+										Developing native iOS applications using Swift and XCode.
+									</p>
+									<p>
+										Writing automation tests for mobile applications using Appium.
+									</p>
+								</div>
+								<div class="right-title-small">Mobile Apllication Developer</div>
+								<div class="mdl-grid no-padding">
+									<div class="mdl-cell mdl-cell--5-col">
+										<div class="icon material-icons place right-place-icons">domain</div>
+										<div class="place right-place-text">CITC Mansoura</div>
+									</div>
+									<div class="mdl-cell mdl-cell--7-col">
+										<div class="icon material-icons place right-place-icons">date_range</div>
+										<div class="place right-place-text">1 Nov 2015-Current</div>
+									</div>
+								</div>
+								<div class="right-details">
+									<p>
+										Developing native Android applications using Java, XML and Android Studio.
+									</p>
+									<p>
+										Developing native iOS applications using Swift and XCode.
+									</p>
+									<p>
+										Developing cross platform mobile applications using Cordova, HTML, CSS and JavaScript.
+									</p>
+								</div>
+								<div class="right-title-small">Mobile Apllication Developer</div>
+								<div class="mdl-grid no-padding">
+									<div class="mdl-cell mdl-cell--5-col">
+										<div class="icon material-icons place right-place-icons">domain</div>
+										<div class="place right-place-text">MT Tanta</div>
+									</div>
+									<div class="mdl-cell mdl-cell--7-col">
+										<div class="icon material-icons place right-place-icons">date_range</div>
+										<div class="place right-place-text">1 May 2014-30 Oct 2015</div>
+									</div>
+								</div>
+								<div class="right-details">
+									<p>
+										Developing cross platform mobile applications using Cordova, HTML, CSS and JavaScript.
+									</p>
+									<p>
+										Developing Node.js web applications.
+									</p>
+								</div>
+								<div class="right-title-small">Android Apllication Developer</div>
+								<div class="mdl-grid no-padding">
+									<div class="mdl-cell mdl-cell--5-col">
+										<div class="icon material-icons place right-place-icons">domain</div>
+										<div class="place right-place-text">EGIT Cairo</div>
+									</div>
+									<div class="mdl-cell mdl-cell--7-col">
+										<div class="icon material-icons place right-place-icons">date_range</div>
+										<div class="place right-place-text">1 Oct 2013-30 Apr 2014</div>
+									</div>
+								</div>
+								<div class="right-details">
+									<p>
+										Developing native Android applications using Java, XML and Eclipse.
+									</p>
+								</div>
+							</div>
+							<div class="right-title-big-container">
+								<div class="icon material-icons mdl-color-text--white round-btn-right">school</div>
+								<div class="right-title-big">Education</div>
+							</div>
+							<div class="right-content">
+								<div class="right-title-small">Bachelor of Engineering</div>
+								<div class="mdl-grid no-padding">
+									<div class="mdl-cell mdl-cell--5-col">
+										<div class="icon material-icons place right-place-icons">account_balance</div>
+										<div class="place right-place-text">Mansours University</div>
+									</div>
+									<div class="mdl-cell mdl-cell--7-col">
+										<div class="icon material-icons place right-place-icons">date_range</div>
+										<div class="place right-place-text">20 Sep 2008-30 Jun 2013</div>
+									</div>
+								</div>
+								<div class="right-details">
+									<p>
+										Graduated from Computers and Systems Engineering department with total grade Very Good and graduation project grade Excellent.
+									</p>
+									<p>
+										Graduation project "Interactive School Tablet".
+									</p>
+									<p>
+										Awarded Injaz Egypt price for graduation project.
+									</p>
+								</div>
+							</div>
+							<div class="right-title-big-container">
+								<div class="icon material-icons mdl-color-text--white round-btn-right">language</div>
+								<div class="right-title-big">Languages</div>
+							</div>
+							<div class="right-content"></div>
+						</div>
 					</div>
 				</div>
 			</main>
