--- a/resume.html
+++ b/resume.html
@@ -159,7 +159,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="mdl-cell mdl-cell--8-col mdl-cell--5-col-tablet">
+						<div class="mdl-cell mdl-cell--8-col mdl-cell--5-col-tablet right-side">
 							<div class="right-title-big-container">
 								<div class="icon material-icons mdl-color-text--white round-btn-right">work</div>
 								<div class="right-title-big">Work Experince</div>
@@ -277,7 +277,30 @@
 								<div class="icon material-icons mdl-color-text--white round-btn-right">language</div>
 								<div class="right-title-big">Languages</div>
 							</div>
-							<div class="right-content"></div>
+							<div class="right-content">
+								<div class="mdl-grid no-padding">
+									<div class="mdl-cell mdl-cell--6-col lang-div">
+										<img src="img/english.png" class="lang-img">
+										<div class="lang-title">English</div>
+										<div class="lang-stars">
+											<div class="icon material-icons">star</div>
+											<div class="icon material-icons">star</div>
+											<div class="icon material-icons">star</div>
+										</div>
+									</div>
+									<div class="mdl-cell mdl-cell--6-col lang-div">
+										<img src="img/arabic.svg" class="lang-img">
+										<div class="lang-title">Arabic</div>
+										<div class="lang-stars">
+											<div class="icon material-icons">star</div>
+											<div class="icon material-icons">star</div>
+											<div class="icon material-icons">star</div>
+											<div class="icon material-icons">star</div>
+											<div class="icon material-icons">star</div>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
