Add more contacts

--- a/contact.html
+++ b/contact.html
@@ -48,15 +48,43 @@
 								<div class="left-data">
 									<div class="contact-item">
 										<div class=" icon material-icons round-btn-left-small icon-contact">location_on</div>
-										<div class="left-data-text">El-Mehalla EL-Kubra, Gharbia, Egypt</div>
+										<div class="left-data-text">
+											<a href="https://www.google.com/maps/search/?api=1&query=El-Mahalla+El-Kubra,+Al+Mahalah+Al+Kubra+(Part+2),+Al+Mahalah+Al+Kubra,+Gharbia+Governorate" target="_blank">
+												El-Mehalla EL-Kubra, Gharbia, Egypt
+											</a>
+										</div>
 									</div>
 									<div class="contact-item">
 										<div class=" icon material-icons round-btn-left-small icon-contact">email</div>
-										<div class="left-data-text">eslam.elmeniawy@gmail.com</div>
+										<div class="left-data-text">
+											<a href="mailto:eslam.elmeniawy@gmail.com" target="_top">
+												eslam.elmeniawy@gmail.com
+											</a>
+										</div>
 									</div>
 									<div class="contact-item">
 										<div class=" icon material-icons round-btn-left-small icon-contact">smartphone</div>
-										<div class="left-data-text text-contact">+20-12-2997-7919</div>
+										<div class="left-data-text text-contact">
+											<a href="tel:+201229977919">
+												+20-12-2997-7919
+											</a>
+										</div>
+									</div>
+									<div class="contact-item">
+										<div class=" icon material-icons round-btn-left-small icon-contact"><img src="img/github.svg"></div>
+										<div class="left-data-text text-contact">
+											<a href="https://github.com/EslamElMeniawy" target="_blank">
+												EslamElMeniawy
+											</a>
+										</div>
+									</div>
+									<div class="contact-item">
+										<div class=" icon material-icons round-btn-left-small icon-contact"><img src="img/linkedin.svg"></div>
+										<div class="left-data-text text-contact">
+											<a href="https://linkedin.com/in/eslamelmeniawy" target="_blank">
+												eslamelmeniawy
+											</a>
+										</div>
 									</div>
 								</div>
 							</div>
